@@ -1,35 +1,0 @@
-# Copyright 2006 James Tauber and contributors
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-from pyjamas import DOM
-
-from pyjamas.ui.SimplePanel import SimplePanel
-from pyjamas.ui import Event
-
-class ClickableHeader(SimplePanel):
-    def __init__(self, disclosurePanel):
-        SimplePanel.__init__(self, DOM.createAnchor())
-        self.disclosurePanel = disclosurePanel
-        element = self.getElement()
-        DOM.setStyleAttribute(element, "display", "block")
-        self.sinkEvents(Event.ONCLICK)
-        self.setStyleName("gwt-disclosurePanel-header")
-
-    def onBrowserEvent(self, event):
-        type = DOM.eventGetType(event)
-        if type == "click":
-            DOM.eventPreventDefault(event)
-            currentState = self.disclosurePanel.getOpen()
-            invertedState = not currentState
-            self.disclosurePanel.setOpen(invertedState)
-
