@@ -11,26 +11,115 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-from __pyjamas__ import JS, console
-
 from pyjamas.ui.Composite import Composite
+from pyjamas.ui.Widget import Widget
+from pyjamas.ui.SimplePanel import SimplePanel
+from pyjamas.ui.VerticalPanel import VerticalPanel 
+from pyjamas.ui import Event
+from pyjamas import DOM
+import pygwt
+
+class ClickableHeader(SimplePanel):
+    def __init__(self, disclosurePanel):
+        SimplePanel.__init__(self, DOM.createAnchor())
+        self.disclosurePanel = disclosurePanel
+        element = self.getElement()
+        DOM.setAttribute(element, "href", "javascript:void(0);");
+        DOM.setStyleAttribute(element, "display", "block")
+        self.sinkEvents(Event.ONCLICK)
+        self.setStyleName("header")
+
+    def onBrowserEvent(self, event):
+        type = DOM.eventGetType(event)
+        if type == "click":
+            DOM.eventPreventDefault(event)
+            newstate = not self.disclosurePanel.getOpen()
+            self.disclosurePanel.setOpen(newstate)
+
+class DefaultHeader(Widget):
+    def __init__(self, text, disclosurePanel):
+        self.disclosurePanel = disclosurePanel
+        self.imageBase = pygwt.getModuleBaseURL()
+
+        self.root = DOM.createTable()
+        self.tbody = DOM.createTBody()
+        self.tr = DOM.createTR()
+        self.imageTD = DOM.createTD()
+        self.labelTD = DOM.createTD()
+        self.imgElem = DOM.createImg()
+
+        self.updateState()
+
+        self.setElement(self.root)
+        DOM.appendChild(self.root, self.tbody)
+        DOM.appendChild(self.tbody, self.tr)
+        DOM.appendChild(self.tr, self.imageTD)
+        DOM.appendChild(self.tr, self.labelTD)
+        DOM.appendChild(self.imageTD, self.imgElem)
+
+        self.setText(text)
+
+        disclosurePanel.addEventHandler(self)
+        self.updateState()
+
+    def getText(self):
+        return DOM.getInnerText(self.labelTD)
+
+    def setText(self, text):
+        DOM.setInnerText(self.labelTD, text)
+
+    def onOpen(self, panel):
+        self.updateState()
+
+    def onClose(self, panel):
+        self.updateState()
+
+    def updateState(self):
+        if self.disclosurePanel.getOpen():
+            DOM.setAttribute(self.imgElem, "src",
+                             self.imageBase + "disclosurePanelOpen.png")
+        else:
+            DOM.setAttribute(self.imgElem, "src",
+                             self.imageBase + "disclosurePanelClosed.png")
+        
 
 class DisclosurePanel(Composite):
-    def __init__(self, headerText, isOpen):
+
+    def __init__(self, headerText, isOpen=False):
+
+        Composite.__init__(self)
+
+        self.handlers = []
+        self.content = None
+
         self.mainPanel = VerticalPanel()
+        self.initWidget(self.mainPanel)
+
         self.header = ClickableHeader(self)
         self.contentWrapper = SimplePanel()
         self.mainPanel.add(self.header)
         self.mainPanel.add(self.contentWrapper)
+        DOM.setStyleAttribute(self.contentWrapper.getElement(),
+                              "padding", "0px");
+        DOM.setStyleAttribute(self.contentWrapper.getElement(),
+                              "overflow", "hidden");
+
         self.isOpen = isOpen
+        self.setStyleName("gwt-DisclosurePanel")
+        self.setContentDisplay()
+
         self.headerObj = DefaultHeader(headerText, self)
         self.setHeader(self.headerObj)
-        self.setContentDisplay()
-        self.initWidget(self.mainPanel)
 
     def add(self, widget):
         if self.getContent() is None:
             self.setContent(widget)
+
+    def addEventHandler(self, handler):
+        self.handlers.append(handler)
+
+    def removeEventHandler(self, handler):
+        self.handlers.remove(handler)
 
     def clear(self):
         self.setContent(None)
@@ -53,21 +142,38 @@ class DisclosurePanel(Composite):
     def setContent(self, widget):
         if self.content is not None:
             self.contentWrapper.setWidget(None)
+            self.content.removeStyleName("content")
 
         self.content = widget
         if self.content is not None:
             self.contentWrapper.setWidget(self.content)
+            self.content.addStyleName("content")
+            self.setContentDisplay()
 
     def setHeader(self, widget):
         self.header.setWidget(widget)
 
     def setOpen(self, isOpen):
-        if self.isOpen != isOpen:
-            self.isOpen = isOpen
+        if self.isOpen == isOpen:
+            return
+        self.isOpen = isOpen
         self.setContentDisplay()
+        self.fireEvent()
+
+    def fireEvent(self):
+        for handler in self.handlers:
+            if self.isOpen:
+                handler.onOpen(self)
+            else:
+                handler.onClose(self)
 
     def setContentDisplay(self):
+        if self.isOpen:
+            self.addStyleName("open")
+            self.removeStyleName("closed")
+        else:
+            self.addStyleName("closed")
+            self.removeStyleName("open")
         self.contentWrapper.setVisible(self.isOpen)
-        self.headerObj.updateState()
 
 
