@@ -1,3 +1,9 @@
+                    Changes made to Pyjamas since 0.5p1
+                    -----------------------------------
+
+ * Completed DisclosurePanel port 
+
+
                     Changes made to Pyjamas since 0.5
                     ---------------------------------
 
